Fix Maven type : jar